Подготовка проекта к проверке

--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <div class="container container-catalog">
+    <div class="container">
       <header class="catalog-header">
         <nav class="navigation">
           <a class="header-logo" href="index.html"><img class="header-logo" src="img/logo.svg" width="154" height="64" alt="logo Gllacy Shop"></a>
@@ -44,13 +44,13 @@
             <li class="purchase-item">
               <button class="remove-purchase" type="button"></button>
               <p class="purchase-item__name purchase-item__name--first">Пломбир с апельсиновым джемом</p>
-              <p class="purchase-item__weight">1,5 кг х<span class="purchase-item__weight-price">200руб.</span></p>
+              <p class="purchase-item__weight">1,5 кг х<span class="purchase-item__weight-price"> 200 руб.</span></p>
               <span class="purchase-item__price">300 руб.</span>
             </li>
             <li class="purchase-item">
               <button class="remove-purchase" type="button" aria-label="Закрыть"></button>
               <p class="purchase-item__name purchase-item__name--second">Клубничный пломбир с присыпкой из белого шоколада</p>
-              <p class="purchase-item__weight">1,5 кг х<span class="purchase-item__weight-price">300руб.</span></p>
+              <p class="purchase-item__weight">1,5 кг х<span class="purchase-item__weight-price"> 300 руб.</span></p>
               <span class="purchase-item__price">450 руб.</span>
             </li>
           </ul>
@@ -138,86 +138,86 @@
     <ul class="product product--creamy">
       <li class="icy-cream-item">
         <img class="icy-cream-item__img" src="img/bestseller-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-        <p class="icy-cream-item__info">310<span class="icy-cream-item__info--currency">₽</span><span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__info">310<span class="icy-cream-item__info--weight">/кг</span></p>
         <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></p>
         <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
       <li class="icy-cream-item">
         <img class="icy-cream-item__img" src="img/bestseller-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
-        <p class="icy-cream-item__info">380<span class="icy-cream-item__info--currency">₽</span><span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__info">380<span class="icy-cream-item__info--weight">/кг</span></p>
         <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочно-кофейное с кусочками шоколада</a></p>
         <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
       <li class="icy-cream-item">
         <img class="icy-cream-item__img" src="img/bestseller-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-        <p class="icy-cream-item__info">355<span class="icy-cream-item__info--currency">₽</span><span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__info">355<span class="icy-cream-item__info--weight">/кг</span></p>
         <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a></p>
         <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
       <li class="icy-cream-item">
         <img class="icy-cream-item__img" src="img/bestseller-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
-        <p class="icy-cream-item__info">415<span class="icy-cream-item__info--currency">₽</span><span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__info">415<span class="icy-cream-item__info--weight">/кг</span></p>
         <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочное крем-брюле с карамельной подливкой</a></p>
         <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
       <li class="icy-cream-item">
         <img class="icy-cream-item__img" src="img/icecream-2a.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
-        <p class="icy-cream-item__info">325<span class="icy-cream-item__info--currency">₽</span><span class="icy-cream-item__info--weight">/кг</span></p>
-        <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочное с брусничным<br> джемом</a></p>
+        <p class="icy-cream-item__info">325<span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочное с брусничным джемом</a></p>
         <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
       <li class="icy-cream-item">
         <img class="icy-cream-item__img" src="img/icecream-2b.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
-        <p class="icy-cream-item__info">410<span class="icy-cream-item__info--currency">₽</span><span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__info">410<span class="icy-cream-item__info--weight">/кг</span></p>
         <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочно-черничное с цельными ягодами черники</a></p>
         <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
       <li class="icy-cream-item">
         <img class="icy-cream-item__img" src="img/icecream-2c.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
-        <p class="icy-cream-item__info">375<span class="icy-cream-item__info--currency">₽</span><span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__info">375<span class="icy-cream-item__info--weight">/кг</span></p>
         <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочно-лимонное с карамельной присыпкой</a></p>
         <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
       <li class="icy-cream-item">
         <img class="icy-cream-item__img" src="img/icecream-2d.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
-        <p class="icy-cream-item__info">320<span class="icy-cream-item__info--currency">₽</span><span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__info">320<span class="icy-cream-item__info--weight">/кг</span></p>
         <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочное с шоколадной стружкой</a></p>
         <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
       <li class="icy-cream-item">
         <img class="icy-cream-item__img" src="img/icecream-3a.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
-        <p class="icy-cream-item__info">440<span class="icy-cream-item__info--currency">₽</span><span class="icy-cream-item__info--weight">/кг</span></p>
-        <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочно-ванильное с<br> кусочками шоколада</a></p>
+        <p class="icy-cream-item__info">440<span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочно-ванильное с<br>кусочками шоколада</a></p>
         <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
       <li class="icy-cream-item">
         <img class="icy-cream-item__img" src="img/icecream-3b.jpg" width="267" height="267" alt="Сливочное с ментоловым сиропом">
-        <p class="icy-cream-item__info">435<span class="icy-cream-item__info--currency">₽</span><span class="icy-cream-item__info--weight">/кг</span></p>
-        <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочное с ментоловым<br>сиропом</a></p>
+        <p class="icy-cream-item__info">435<span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочное с ментоловым сиропом</a></p>
         <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
       <li class="icy-cream-item">
         <img class="icy-cream-item__img" src="img/icecream-3c.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
-        <p class="icy-cream-item__info">355<span class="icy-cream-item__info--currency">₽</span><span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__info">355<span class="icy-cream-item__info--weight">/кг</span></p>
         <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочное с кусочками черного шоколада</a></p>
         <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
       <li class="icy-cream-item">
         <img class="icy-cream-item__img" src="img/icecream-3d.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
-        <p class="icy-cream-item__info">420<span class="icy-cream-item__info--currency">₽</span><span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__info">420<span class="icy-cream-item__info--weight">/кг</span></p>
         <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочное с мятным сиропом</a></p>
         <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
     </ul>
   </section>
   <ul class="pagination-list">
-    <li><a class="pagination-link-back" href="#"></a></li>
-    <li class="pagination-number"><a class="pagination-link pagination-link--current">1</a></li>
-    <li class="pagination-number"><a class="pagination-link" href="#">2</a></li>
-    <li class="pagination-number"><a class="pagination-link" href="#">3</a></li>
-    <li class="pagination-number"><a class="pagination-link" href="#">4</a></li>
-    <li class="pagination-number"><a class="pagination-link" href="#">5</a></li>
-    <li><a class="pagination-link-next" href="#"></a></li>
+    <li><a class="pagination-list__link-back" href="#"></a></li>
+    <li class="pagination-list__number"><a class="pagination-list__link pagination-list__link--current">1</a></li>
+    <li class="pagination-list__number"><a class="pagination-list__link" href="#">2</a></li>
+    <li class="pagination-list__number"><a class="pagination-list__link" href="#">3</a></li>
+    <li class="pagination-list__number"><a class="pagination-list__link" href="#">4</a></li>
+    <li class="pagination-list__number"><a class="pagination-list__link" href="#">5</a></li>
+    <li><a class="pagination-list__link-next" href="#"></a></li>
   </ul>
 </main>
 <footer class="main-footer">
