--- a/index.html
+++ b/index.html
@@ -92,31 +92,31 @@
     <ul class="product">
       <li class="icy-cream-item icy-cream-item--hit">
         <img class="icy-cream-item__img" src="img/bestseller-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-        <p class="icy-cream-item__info">310<span class="icy-cream-item__info--currency">₽</span><span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__info">310<span class="icy-cream-item__info--weight">/кг</span></p>
         <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></p>
         <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
       <li class="icy-cream-item icy-cream-item--hit">
         <img class="icy-cream-item__img" src="img/bestseller-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
-        <p class="icy-cream-item__info">380<span class="icy-cream-item__info--currency">₽</span><span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__info">380<span class="icy-cream-item__info--weight">/кг</span></p>
         <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочно-кофейное с кусочками шоколада</a></p>
         <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
       <li class="icy-cream-item icy-cream-item--hit">
         <img class="icy-cream-item__img" src="img/bestseller-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-        <p class="icy-cream-item__info">355<span class="icy-cream-item__info--currency">₽</span><span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__info">355<span class="icy-cream-item__info--weight">/кг</span></p>
         <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a></p>
         <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
       <li class="icy-cream-item icy-cream-item--hit">
         <img class="icy-cream-item__img" src="img/bestseller-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
-        <p class="icy-cream-item__info">415<span class="icy-cream-item__info--currency">₽</span><span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__info">415<span class="icy-cream-item__info--weight">/кг</span></p>
         <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочное крем-брюле с карамельной подливкой</a></p>
         <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
     </ul>
     <section class="about-ice-cream">
-      <h3 class="about-ice-cream__title">Магазин Глэйси - это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h3>
+      <h3 class="about-ice-cream__title">Магазин Глэйси &mdash; это онлайн- и офлайн- магазин по продаже мороженого собственного производства на развес</h3>
       <ul class="about-gllacy">
         <li class="about-gllacy__info about-gllacy__info--icecream">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
         <li class="about-gllacy__info about-gllacy__info--cow">Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</li>
@@ -131,7 +131,7 @@
       </article>
       <section class="block-item wrap-subscribe">
         <div class="subscribe">
-          <p class="subscribe__info">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно=)</p>
+          <p class="subscribe__info">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
           <form class="subscribe-form" method="post" action="https://echo.htmlacademy.ru">
             <label class="visually-hidden" for="subscribe-email">Электронная почта</label>
             <input class="nav-input nav-input--subscribe" type="email" name="email" id="subscribe-email" placeholder="Электронная почта">
@@ -145,9 +145,9 @@
 <section class="map">
   <div class="map__container">
     <div class="address">
-      <p class="address__info">Адрес главного офиса <br>и офлайн-магазина:<span class="address__bold">ул. Большая Конюшенная 19/8, Санкт-Петербург</span></p>
-      <p class="address__info">Для заказов по телефону:<span class="address__bold address__bold--phone">8 812 450-25-25</span>(с 10 до 20 ежедневно)</p>
-      <button type="button" class="button button--feedback">Форма обратной связи</button>
+      <div class="address__info">Адрес главного офиса <br>и офлайн-магазина:<p class="address__bold">ул. Большая Конюшенная 19/8, Санкт-Петербург</p></div>
+      <div class="address__info">Для заказов по телефону:<p class="address__bold address__bold--phone">8 812 450-25-25</p>(с 10 до 20 ежедневно)</div>
+      <a class="button button--feedback" href="#">Форма обратной связи</a>
     </div>
   </div>
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.599104370522!2d30.320889251890595!3d59.938794181787266!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+Street%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2slv!4v1528043560284" allowfullscreen></iframe>
@@ -173,7 +173,6 @@
   <p class="footer-copyright__made-in">Сделано в <a class="footer-link" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> &copy; 2017</p>
 </div>
 </footer>
-<!--Всплывающее окно -->
 <section class="feedback">
 <button class="feedback-close" type="button">Закрыть</button>
 <h3 class="feedback-title">Мы обязательно вам ответим!</h3>
@@ -185,8 +184,8 @@
     <a class="button feedback-btn" href="#">Отправить</a>
   </div>
 </form>
-</section>
 <div class="feedback-overlay"></div>
+</section>
 </div>
 </div>
 </body>
