убрала br, добавила подчеркивание для firefox, удалила иконку vk

--- a/catalog.html
+++ b/catalog.html
@@ -78,7 +78,7 @@
           <li class="breadcrumbs__menu">Сливочное</li>
         </ul>
         <div class="time-info-wrap">
-          <p class="header-time-info">С 10 до 20,ежедневно</p>
+          <p class="header-time-info">С 10 до 20, ежедневно</p>
           <span class="header-time-info__phone">8 812 450-25-25</span>
         </div>
       </div>
@@ -99,7 +99,7 @@
             </div>
           </div>
           <div class="catalog-form-block">
-            <p class="input-name">Цена: 100 руб. - 500 руб.</p>
+            <p class="input-name">Цена: 100 руб. – 500 руб.</p>
             <div class="catalog-range">
               <div class="price-scale">
                 <div class="price-bar"></div>
