--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </nav>
         <div class="conteiner-time">
           <div class="time-info-wrap">
-            <p class="header-time-info">С 10 до 20,ежедневно</p>
+            <p class="header-time-info">С 10 до 20, ежедневно</p>
             <span class="header-time-info__phone">8 812 450-25-25</span>
           </div>
         </div>
@@ -155,11 +155,9 @@
     <section class="map">
       <div class="map__container">
         <div class="address">
-          <div class="address__info">Адрес главного офиса
-            <br>и офлайн-магазина:
+          <p class="address__info">Адрес главного офиса и офлайн- магазина:</p>
             <p class="address__bold">ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
-          </div>
-          <div class="address__info">Для заказов по телефону:
+          <div class="address__info-phone">Для заказов по телефону:
             <p class="address__bold address__bold--phone">8 812 450-25-25</p>(с 10 до 20 ежедневно)</div>
           <a class="button button--feedback" href="#">Форма обратной связи</a>
         </div>
