--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
           <p class="footer-copyright__made-in">Сделано в <a class="footer-link" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> &copy; 2017</p>
         </div>
       </footer>
+      <div class="feedback-overlay">
       <section class="feedback">
         <button class="feedback-close" type="button">Закрыть</button>
         <h3 class="feedback-title">Мы обязательно вам ответим!</h3>
@@ -196,8 +197,8 @@
             <a class="button feedback-btn" href="#">Отправить</a>
           </div>
         </form>
-        <div class="feedback-overlay"></div>
       </section>
+      </div>
     </div>
   </div>
 </body>
