переполнение блоков и форма на внутренней странице

--- a/catalog.html
+++ b/catalog.html
@@ -117,7 +117,7 @@
               <input class="visually-hidden radio-btn" type="radio" name="fat-content" value="ten" id="ten-percent" checked>
               <label class="catalog-label label-fat" for="ten-percent" tabindex="0">до 10%</label>
               <input class="visually-hidden radio-btn" type="radio" name="fat-content" value="thirty" id="thirty-percent">
-              <label class="catalog-label label-fat" for="thirty-percent" tabindex="0">до 30%</label>
+              <label class="catalog-label label-fat label-fat--thirty" for="thirty-percent" tabindex="0">до 30%</label>
               <input class="visually-hidden radio-btn" type="radio" name="fat-content" value="more-thirty" id="more-thirty-percent">
               <label class="catalog-label label-fat" for="more-thirty-percent" tabindex="0">выше 30%</label>
             </div>
