--- a/catalog.html
+++ b/catalog.html
@@ -113,7 +113,7 @@
             <legend class="input-name">Жирность:</legend>
             <div class="catalog-form-item catalog-form-item--radio">
               <input class="visually-hidden radio-btn" type="radio" name="fat-content" value="zero" id="zero-percent">
-              <label class="catalog-label label-fat" for="zero-percent" tabindex="0">0%</label>
+              <label class="catalog-label label-fat label-fat--zero" for="zero-percent" tabindex="0">0%</label>
               <input class="visually-hidden radio-btn" type="radio" name="fat-content" value="ten" id="ten-percent" checked>
               <label class="catalog-label label-fat" for="ten-percent" tabindex="0">до 10%</label>
               <input class="visually-hidden radio-btn" type="radio" name="fat-content" value="thirty" id="thirty-percent">
