--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>HTML Academy: Глейси</title>
   <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/style.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -200,7 +200,7 @@
       <div class="feedback-overlay"></div>
     </div>
   </div>
-  <script type="text/javascript" src="js/script.js"></script>
+  <script type="text/javascript" src="js/script.min.js"></script>
 </body>
 
 </html>
